<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityFR">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:id="@+id/toolbar">

        <ImageView
            android:layout_width="379dp"
            android:layout_height="match_parent"
            android:src="@drawable/news_icon_3">

        </ImageView>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search News..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


        </androidx.appcompat.widget.SearchView>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_1"
                android:text="@string/General_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_2"
                android:text="@string/Entertainment_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_3"
                android:text="@string/Business_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_4"
                android:text="@string/Health_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_5"
                android:text="@string/Science_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_6"
                android:text="@string/Sports_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:id="@+id/btn_7"
                android:text="@string/Technology_FR"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:contentDescription="technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>